# covenant-layer

./: CONTRIBUTING.md  GOVERNANCE.md  LICENSE.md  README.md
.github/workflows/: framework-ci.yml
LICENSES/: CC-BY-4.0.txt
demo/: README.md  dry-run-checklist.md  travel-demo.md
diagrams/: layered-model.txt  lifecycle.txt  old-vs-new.txt
docs/: architecture.md  demo-e2e-timeline.html  mental-model.md  network-function-plan.html  network-model.md  security-rationale.md
framework/: .env.example  Cargo.toml  Makefile  README.md  foundry.toml  governance-model.md  networks.yaml  provider-manifest.template.yaml  registry-contract-interface.md  runbook-agent-service.md  runbook-broker-verification.md  runbook-broker.md  runbook-deployer.md  runbook-provider.md  runbook-settlement-service.md  runbook-verifier.md
framework/conformance-profiles/: onboarding-v1.md
framework/contracts/: ProviderRegistry.sol
framework/examples/: agent-service.template.yaml  broker.template.yaml  provider.emirates.candidate.yaml  settlement-service.template.yaml  verifier.template.yaml
framework/script/: DeployProviderRegistry.s.sol
framework/scripts/: deploy_registry.sh
framework/src/: chain.rs  config.rs  conformance.rs  constants.rs  contracts.rs  lib.rs  main.rs  manifest.rs  models.rs  registry.rs  store.rs
framework/test/: ProviderRegistry.t.sol
framework/tests/: framework_tests.rs
spec/: 00-intro.md  01-problem.md  02-core-protocol.md  03-security.md  04-examples.md  05-wire-integrity.md  06-governance-dispute-upgrades.md  07-compatibility-matrix.md
(+23 files in other folders)
